--- a/style.css
+++ b/style.css
@@ -73,6 +73,10 @@ body {
 .imgofme {
     width: 298px;
     height: 369px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    /* width: 50%; */
 }
 
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
