--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ body {
 
 .intro-slide {
   height: 100vh;
-  background-color: red;
+  background-color: black;
+  color: rgb(252, 168, 0);
   box-sizing: border-box;
   display: flex;
   justify-content: center;
@@ -37,7 +38,8 @@ body {
 .about-slide {
   padding-top: 59.2px;
   height: 100vh;
-  background-color: rgb(231, 154, 107);
+  background-color: rgb(252, 168, 0);
+  color: black;
   box-sizing: border-box;
 }
 
@@ -48,7 +50,8 @@ body {
 .skills-slide {
   padding-top: 59.2px;
   height: 100vh;
-  background-color: rgb(96, 163, 214);
+  background-color: black;
+  color: rgb(252, 168, 0);
   box-sizing: border-box;
 }
 
@@ -59,7 +62,8 @@ body {
 .project-slide {
   padding-top: 59.2px;
   height: 100vh;
-  background-color: rgb(146, 170, 188);
+  background-color: rgb(252, 168, 0);
+  color: black;
   box-sizing: border-box;
 }
 
@@ -70,7 +74,8 @@ body {
 .contact-slide {
   padding-top: 59.2px;
   height: 100vh;
-  background-color: rgb(45, 79, 105);
+  background-color: black;
+  color: rgb(252, 168, 0);
   box-sizing: border-box;
 }
 
