--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ html, body {
 
 .contact-slide {
   padding-top: 100px;
-  height: 75vh;
+  height: 80vh;
   background-color: rgb(160, 145, 145);
   color: black;
   box-sizing: border-box;
@@ -117,5 +117,21 @@ div .col-3 {
 }
 
 footer {
-  background-color: rgb(160, 145, 145);
+  background-color: rgb(142, 129, 129);
+}
+
+
+@media screen and (max-width: 767px) {
+  .contact-slide {
+    height: 125vh;
+  }
+  .about-slide {
+    height: 90vh;
+  }
+}
+
+@media screen and (max-width: 1400px) {
+  .skills-slide {
+    height: 150vh;
+  }
 }
