--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ figcaption {
   #personalwebsite {
     width: 450px;
   }
-  #stockpredictor {
+  #financialdashboard {
     width: 450px;
   }
   figcaption {
